@@ -1,3 +1,9 @@
+20130816 (1109 prefixes)
+  added: fea,penis,scms,sdo,wapp
+
+  improved update process
+  remove .bak files
+
 20130812 (1104 prefixes)
   added: lldr,up
   changed: copyright
